--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2"
-    "@babel/plugin-proposal-private-property-in-object": "^7.14.5" 
-  },
+    "tailwindcss": "^3.3.2",
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5"
   }
-
+}
